--- a/NancyAspNetHost1/Content/AjaxReport.html
+++ b/NancyAspNetHost1/Content/AjaxReport.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>ASP.NET SignalR Stock Ticker</title>
+    <title>AJAX Query Report</title>
     <link href="StockTicker.css" rel="stylesheet" />
 </head>
 <body>
